======================
   CHANGES: ranvier
======================

Current
=======

* Provided a way to statically find resources which have no links to it in the
  source code.

* Provided logging of request path in the resource tree via the reporters, e.g.

    @@Root -> @@FolderWithMenu -> @@<Resource>

* Moved namexform somewhere else than the mapper, it should probably be global,
  add setting the resid() to ctxt, so that we don't have to pass in the mapper
  when we want to get a node's resource.  We accept the global variable for this
  case.  Move the namexform outside of the mapper, and maybe as a global
  parameter that has to be set by glue code.

* Fixed bug with urlopen() specifying the mode.

* Arrange to automatically append a trailing slash to non-leaf resources that
  get served, in order to minimize redirection if _training_slash is true.

* Implement forward matching without going via the resource tree, and return a
  dict of the matched values.  Do this with a regexp, you give it a URL and it
  attempts to match it and return the components.  Should be easy
  The tests can use this in order to check for specified resulting URLs with
  values.

* Added option for sorting pretty render resources

* Made the pretty render resources accept default values as args